[project]
name = "imgtoolkit"
dynamic = ["version"]
description = "Collection of image tools for checking photos for blur and duplicates, and handle fake PNG transparency"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Raptor K", email = "findme@raptor.hk" }]
keywords = ["image", "find duplicate", "find blur", "fake png"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "dhash",
    "alive-progress",
    "pillow",
    "opencv-python",
    "about-time",
    "grapheme",
]

[project.scripts]
imgtoolkit = "imgtoolkit.tools:main"

[project.urls]
Homepage = "https://github.com/shivanraptor/imgtoolkit"

[build-system]
requires = ["hatchling >=1.18", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/imgtoolkit"]